--- a/seminars/sem3/Makefile
+++ b/seminars/sem3/Makefile
@@ -4,10 +4,10 @@ all: test.o
 	./$<
 
 test.o: test.c green.o green.h
-	$(CC) test.c -o $@ green.o
+	$(CC) test.c -o $@ green.o -g
 
 green.o: green.c
-	$(CC) $< -c
+	$(CC) $< -c -g
 
 clean:
 	rm -f *.o
