split everything up in files and updates makefile to reflect it

--- a/seminars/sem3/Makefile
+++ b/seminars/sem3/Makefile
@@ -1,10 +1,25 @@
 CC = gcc
 
-all: test.o
-	./$<
+# Executes all tests
+all: vanilla cond locks
 
-test.o: test.c green.o green.h
-	$(CC) test.c -o $@ green.o -g
+# Vanilla test
+vanilla: vanilla.o
+	./$<
+vanilla.o: vanilla.c green.o green.h
+	$(CC) vanilla.c -o $@ green.o -g
+
+# Conditional test
+cond: cond.o
+	./$<
+cond.o: cond.c green.o green.h
+	$(CC) cond.c -o $@ green.o -g
+
+# Lock Test
+locks: locks.o
+	./$<
+locks.o: locks.c green.o green.h
+	$(CC) locks.c -o $@ green.o -g
 
 green.o: green.c
 	$(CC) $< -c -g
