Minor changes to Makefile

--- a/seminars/sem3/Makefile
+++ b/seminars/sem3/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 
 # Executes all tests
 all: #vanilla cond locks
-	$(info Run one of: vanilla, cond, lock)
+	$(info Run one of: vanilla, cond, lock, bench)
 
 # Benchmark
 bench: bench.o
